根据IDEA提示简化代码